--- a/roc-candy.css
+++ b/roc-candy.css
@@ -144,7 +144,7 @@ module.PageModule{transition-duration: 0.1s;}
 }
 
 nav#PrimaryNav, nav#SecondaryNav {
-    border:1px solid #fc4b7f !important;
+    border:2px solid #fc4b7f !important;
     border-radius: 18px;
     /*originally about 30px, had to be reduced because different 
     secondary nav sizes would cause inconsistencies when expanded*/
@@ -329,6 +329,7 @@ pre, code.CodeSnippet {color:var(--DefaultRedColor);}
             /*rgin-top:10px;*/
             border:2px solid #fc4b7f;
             border-radius: 10px;
+            backdrop-filter: blur(10px);
         }
 }
 
