fix icon offsets in secondarynav

--- a/roc-candy.css
+++ b/roc-candy.css
@@ -334,3 +334,4 @@ pre, code.CodeSnippet {color:var(--DefaultRedColor);}
 }
 
 #BuddyChatPromoColumn {background: #fc4b7f !important;}
+body:not([data-_ssecondarynavmode="Float"]) > wrapper > #SecondaryNav > wrapper {margin-left:-2.5px;}
