--- a/roc-candy.css
+++ b/roc-candy.css
@@ -227,6 +227,8 @@ button, .ButtonLike {
 img#GbLogo {
         background:url("https://files.gamebanana.com/bitpit/logdfgdfgdfgo.gif");
         background-size:308px 32px;
+    
+        filter:none !important;
        
         width: 308px;
         height: 32px;
@@ -234,7 +236,8 @@ img#GbLogo {
         -moz-box-sizing: border-box;
         box-sizing: border-box;
         padding-left: 308px;
-}
+}#BananaNavModule > widget > a {filter:none !important;}
+#BananaNavModule > widget > a:hover {filter:drop-shadow(0px 0px 3.2px blue) !important;}
 
 /*better contrast*/
 #MasterLog > logs > log > span {color:#ffffff !important;}
