--- a/blueroses.css
+++ b/blueroses.css
@@ -297,7 +297,7 @@ module.PageModule > h2 {
 module.PageModule > h2:after {display:none;}
 
 overlay#Headline {
-  display:grid;
+  display:grid; /*block*/
   background:url("https://bonkmaykr.xyz/index/assets/images/channels4_banner.jpg");
   width:100%;
   background-repeat:no-repeat;
@@ -312,14 +312,39 @@ overlay#Headline {
 
 nav#Breadcrumb {
     width:auto !important;
-    display:block !important;
-    position:sticky;
+    display:flex !important;
+    
+    /*unnecessary*/
+    /*position: absolute;
+    right:20px;
+    bottom:20px;*/
+    
+    /*minmode*/
+    /*comment out if unwanted*/
+    /*margin-bottom:-8px;
+    margin-right:-8px;*/
+    
+    /*half minmode*/
+    /*comment out if unwanted*/
+    margin-bottom:-5px;
+    margin-right:-5px;
 }
 
 hwrapper > #PageTitle {display:none;}
 
 @media (max-width : 800px) {
     overlay#Headline {height:20vw;background-size:auto 130%;margin:20px;}
+	
+/*classic breadcrumbs*/
+#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}
+}
+
+@media (max-width : 518px) {
+    nav#Breadcrumb {
+    /*minmode*/
+   /* margin-bottom:-8px;
+    margin-right:-8px;*/
+    }
 }
 
 @media (min-width : 1700px) {
@@ -347,6 +372,10 @@ nav#SecondaryNav {
     padding:0px;
     backdrop-filter: blur(10px);
     overflow:visible; /*fix scrollbars appearing when Secondary Nav Hover Animations is installed*/
+}
+
+pane {
+    backdrop-filter: blur(10px);
 }
 
 nav#SecondaryNav.Expanded {
