--- a/blueroses.css
+++ b/blueroses.css
@@ -336,7 +336,7 @@ hwrapper > #PageTitle {display:none;}
     overlay#Headline {height:20vw;background-size:auto 130%;margin:20px;}
 	
 /*classic breadcrumbs*/
-#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}
+/*#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}*/
 }
 
 @media (max-width : 518px) {
@@ -394,3 +394,7 @@ nav#SecondaryNav.Expanded {
     padding-left:8px !important;
     padding-right:24px !important;
 }
+	
+/*classic breadcrumbs - everywhere*/
+#Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}
+
