--- a/blueroses.css
+++ b/blueroses.css
@@ -398,3 +398,7 @@ nav#SecondaryNav.Expanded {
 /*classic breadcrumbs - everywhere*/
 #Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}
 
+div.ThirdPartyModule {
+    margin-left: 2px;
+    margin-right: 2px;
+}
