--- a/blueroses.css
+++ b/blueroses.css
@@ -18,8 +18,8 @@
 }
 
 :root {
-  --defaultCursor:   url("https://files.gamebanana.com/bitpit/01.cur") 0 0,default !important;
-  --pointerCursor:   url("https://files.gamebanana.com/bitpit/01.cur") 0 0,default !important;
+  --defaultCursor:   url("https://bonkmaykr.xyz/index/assets/images/bmpointer.cur") 0 0,default !important;
+  --pointerCursor:   url("https://bonkmaykr.xyz/index/assets/images/bmpointer.cur") 0 0,pointer !important;
   /*--pointerCursor:   url("https://files.gamebanana.com/bitpit/15a.cur") 14 2,default !important;*/
 	
  --DefaultTextColor: #ffffff;
