--- a/blueroses.css
+++ b/blueroses.css
@@ -6,6 +6,7 @@
 /* Gamebanana:bonkmaykr    */
 
 @import url("https://bonkmaykrq.github.io/gbubers/snippets/cursor.css");
+@import url("https://bonkmaykrq.github.io/gbubers/snippets/oldalertsdark.css");
 
 @font-face {
     font-family: xirod;
