--- a/roc-candy.css
+++ b/roc-candy.css
@@ -5,6 +5,7 @@
 /* Gamebanana:bonkmaykr   */
 
 @import url("https://bonkmaykrq.github.io/gbubers/snippets/cursor.css");
+@import url("https://bonkmaykrq.github.io/gbubers/snippets/oldalertsdark.css");
 
 @font-face {
     font-family: xirod;
