--- a/glacier.css
+++ b/glacier.css
@@ -3,6 +3,7 @@
 /*                      */
 /* bonkmaykr.xyz        */
 /* Gamebanana:bonkmaykr */
+@import url("https://bonkmaykrq.github.io/gbubers/snippets/oldalertsdark.css");
 
 @font-face {
     font-family:Abel;
