--- a/blueroses.css
+++ b/blueroses.css
@@ -403,10 +403,10 @@ nav#SecondaryNav.Expanded {
 /*classic breadcrumbs - everywhere*/
 #Breadcrumb { font-size:var(--BreadcrumbFontSize); font-weight:bold; padding:.25em .75em; border-radius:1em; align-self:flex-end;}#Breadcrumb img {display:none;}#Breadcrumb .RightArrowIcon {width:0px;margin-left:7px;margin-right:12.5px;}#Breadcrumb .RightArrowIcon:after {content:"/";}
 
-div.ThirdPartyModule {
+/*div.ThirdPartyModule {
     margin-left: 2px;
     margin-right: 2px;
-}
+}*/
 
 /*contrast fix*/
 .TitleOnly > ul > li itemcount {color:#ff9bcf !important;}
