--- a/blueroses.css
+++ b/blueroses.css
@@ -7,6 +7,7 @@
 
 @import url("https://bonkmaykrq.github.io/gbubers/snippets/cursor.css");
 @import url("https://bonkmaykrq.github.io/gbubers/snippets/oldalertsdark.css");
+@import url("https://bonkmaykrq.github.io/gbubers/snippets/cmodwidth.css");
 
 @font-face {
     font-family: xirod;
@@ -19,6 +20,8 @@
 }
 
 :root {
+  --cmodwidth:0.1em;
+	
   --defaultCursor:   url("https://bonkmaykr.xyz/index/assets/images/bmpointer.cur") 0 0,default !important;
   --pointerCursor:   url("https://bonkmaykr.xyz/index/assets/images/ezgif-3-82b0eaebd27b-png-split/frame_apngframe1.png") 15 15,pointer;
   /*--pointerCursor:   url("https://files.gamebanana.com/bitpit/15a.cur") 14 2,default !important;*/
