--- a/blueroses.css
+++ b/blueroses.css
@@ -339,7 +339,7 @@ hwrapper > #PageTitle {display:none;}
 }
 
 @media (min-width : 1700px) {
-    overlay#Headline {height:11.75vw;background-size:cover;}
+    overlay#Headline {/*height:11.75vw;*/background-size:cover;}
 }
 
 @media (min-width : 801px) {
