--- a/blueroses.css
+++ b/blueroses.css
@@ -449,4 +449,8 @@ div[id^="tippy-"] > .tippy-box[data-theme*="dropdown"] > .tippy-content {
     border-radius: 0px 0px 18px 18px;
 }
 
+div[id^="tippy-"] > .tippy-box[data-theme="dropdown siteMenu"] > .tippy-content {
+    margin-right:-1px;
+}
+
 #NavGamesMenuToggle {filter:drop-shadow(0px 0px 8px black) drop-shadow(0px 0px 2px black);}
