--- a/blueroses.css
+++ b/blueroses.css
@@ -160,7 +160,7 @@ ul.PostStamps li {
     --DefaultRedColor: #fe760f;
     --DefaultGreenColor: #fc4b7f;
 }
-ul.PostStamps {border-color: var(--PostStampColor);}
+ul.PostStamps {border-color: var(--PostStampColor) !important;}
 
 .ExtendedContentButton:not(:hover):not(.Expanded),
 #ResponsibilitiesModule > div > dl > dd > ul > li
